--- a/resume.tex
+++ b/resume.tex
@@ -24,7 +24,7 @@
 
 \name{Harrison}{Ford}
 \input{contact_info} % avoid releasing my address!
-\homepage{0xcc.pw}
+\homepage{hat.fo}
 \social[linkedin]{hatf0}
 \social[github]{hatf0}
 
